# grokterm

./: Cargo.toml  Dioxus.toml  Dockerfile
assets/: main.css
src/: main.rs
