[package]
name = "grokterm"
version = "0.1.0"
authors = ["clay-codes <cplatt580@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-logger = "0.4.1"
dioxus-hooks = "0.5.0"
dioxus = { version = "0.5.0", features = ["web"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
log = "0.4.21"
futures = "0.3.30"
